# libwaveblocks

./: .gitignore  Bases.hpp  CMakeLists.txt  Doxyfile  Doxyfile.in  Evaluation.hpp  Exponential.hpp  HyperCubicShape.hpp  LexicalShapeEnumerator.hpp  LocalQuadratic.hpp  LocalRemainder.hpp  Makefile  MatrixPotential.cpp  MatrixToGrid.hpp  MultiIndexUint.hpp  PolymorphousShape.hpp  README.md  Types.hpp  WavePacket.hpp  _hagedorn_8hpp.html  _hagedorn_8hpp_source.html  abstract.hpp  adaptors_8hpp.html  adaptors_8hpp_source.html  annotated.html  bases.hpp  bases_8hpp.html  bases_8hpp_source.html  basic__steps_8hpp.html  basic__steps_8hpp_source.html  class_eigen_h_d_f5_1_1_complex_h5_type-members.html  class_eigen_h_d_f5_1_1_complex_h5_type.html  class_eigen_h_d_f5_1_1_my_triplet-members.html  class_eigen_h_d_f5_1_1_my_triplet.html  class_eigen_h_d_f5_1_1_sparse_h5_type-members.html  class_eigen_h_d_f5_1_1_sparse_h5_type.html  classes.html  classwaveblocks_1_1csv_1_1_coefficients_file_parser-members.html  classwaveblocks_1_1csv_1_1_coefficients_file_parser.html  classwaveblocks_1_1csv_1_1_ha_wp_coefficients_loader-members.html  (+541 more)
cmake_modules/: FindYamlCpp.cmake
data/: harmonic_2D_py.hdf5
doc/: LexicalShapeIterator.pyg  LexicalShapeIterator.tex  Makefile  algebra.tex  hawp.hpp  hawp_inheritance.dot  header_code.tex  header_math.tex  manual.tex  references.bib  shape.hpp  shape_enum.hpp  shape_enumerator.pdf_tex  shape_extension.pdf_tex  shape_slicing.pdf_tex  title.tex  waveblocks.hpp
doc-quadrature/: .gitignore  Makefile  manual-quadrature.tex  references.bib
doc-quadrature/figures/: Makefile  comparison-multi-dim.eps  comparison-multi-dim.gnuplot  comparison-multi-dim.tex  gh-rule.eps  gh-rule.gnuplot  gh-rule.tex  speedup-genz-keister.eps  speedup-genz-keister.gnuplot  speedup-genz-keister.tex  speedup-multi-comp.eps  speedup-multi-comp.gnuplot  speedup-multi-comp.tex  speedup-multi-dim.eps  speedup-multi-dim.gnuplot  speedup-multi-dim.tex  speedup-one-dim.eps  speedup-one-dim.gnuplot  speedup-one-dim.tex  tp-rule.eps  tp-rule.gnuplot  tp-rule.tex
doc-quadrature/sections/: innerproducts.tex  introduction.tex  quadrature.tex  results.tex
doxygen/html/: _formulas.tex  annotated.html  basic__types_8hpp_source.html  classes.html  classwaveblocks_1_1_continuous_sqrt-members.html  classwaveblocks_1_1_continuous_sqrt.html  classwaveblocks_1_1_default_shape_enumeration-members.html  classwaveblocks_1_1_default_shape_enumeration.html  classwaveblocks_1_1_default_shape_slice-members.html  classwaveblocks_1_1_default_shape_slice.html  classwaveblocks_1_1_evaluator-members.html  classwaveblocks_1_1_evaluator.html  classwaveblocks_1_1_extended_shape-members.html  (+77 more)
examples/: 3d_scalar_hawp_basis.yaml  3d_scalar_hawp_coeffs.csv  CMakeLists.txt  GenExamples.py  HaWp2CSV.py  HaWp2YAML.py  anharmonic_1D.cpp  anharmonic_1D_convergence.cpp  anharmonic_1D_newpropagator.cpp  harmonic_1D.cpp  harmonic_1D_convergence.cpp  harmonic_2D.cpp  harmonic_2D_convergence.cpp  harmonic_2D_newpropagator.cpp  harmonic_XD_newpropagator.cpp  hawp_eval.cpp  hawp_eval.py  hawp_gradient.cpp  hawp_gradient_easy.cpp  hawp_homogen.cpp  hawp_homogen2.cpp  hawp_homogen_easy.cpp  hawp_inhomogen.cpp  hawp_performance.cpp  hawp_t.cpp  henon-heiles_2D.cpp  henon-heiles_2D_convergence.cpp  henon-heiles_2D_newpropagator.cpp  henon-heiles_newpropagator.cpp  morse_1D.cpp  morse_1D_convergence.cpp  nonsense_2N_1D.cpp  nonsense_2N_1D_inhom.cpp  nonsense_2N_1D_inhom_newpropagator.cpp  nonsense_2N_1D_newpropagator.cpp  nonsense_2N_2D.cpp  nonsense_2N_2D_debug.cpp  nonsense_2N_2D_inhom.cpp  nonsense_2N_2D_inhom_debug.cpp  nonsense_2N_2D_inhom_newpropagator.cpp  (+13 more)
lio/: macros.hpp  types.hpp
matrixPotentials/: bases.hpp  macros.hpp  potentials.hpp  test.cpp  types.hpp
scripts/: create_tables.py  plot1N1D.py  plotAnharmonic.py  plotHarmonic_2D.py  plotParameters.py  plotTunneling1D.py  plot_propagator_convergence.py  sample_wavepacket.py
test/: .directory  CMakeLists.txt  HaWp2YAML.py  RuntimeTest.py  check_coefficients.hpp  check_shape_enumeration.hpp  check_wavepacket.hpp  coefficients_file_parser.cpp  coefficients_file_parser.hpp  config.yaml  datatest.cpp  efficient_slice_generator.cpp  packet_homogen.yaml  packet_inhomogen.yaml  packet_scalar.yaml  paramset.yaml  profile_hagedorn_wavepacket_evaluation.cpp  sample_wavefunc.hpp  sample_wavepacket.hpp  shape.yaml  shape_extension.cpp  shape_gradient.cpp  shape_gradient.ipynb  slim_recursion.cpp  slim_recursion.gnuplot  slim_recursion.ipynb  slim_recursion_py.gnuplot  sparse_manhattan_tree.cpp  spielwiese.cpp  test_2hdf_files.cpp  test_cont_sqrt.cpp  test_eigen.cpp  test_eigenhdf.cpp  test_hagedorn_gradient_operator.cpp  test_hagedorn_gradient_operator.ipynb  test_hagedorn_wavepacket_evaluation.cpp  test_hagedorn_wavepacket_evaluation.ipynb  test_hawp_evaluator.cpp  test_hawp_evaluator.ipynb  test_hawp_gradient.cpp  (+18 more)
test/.ipynb_checkpoints/: shape_gradient-checkpoint.ipynb  slim_recursion-checkpoint.ipynb
test/util/: profiling.cpp  profiling.hpp  time.cpp  time.hpp
tex/: Bibliography.bib  Thesis.cls  main.tex
waveblocks/: .shape_hypercubic.hpp.kate-swp  basic_types.hpp  continuous_sqrt.hpp  gauss_hermite_qr.hpp  genz_keister_qr.hpp  gradient_operator.hpp  hagedorn_basis_evaluator.hpp  hagedorn_basis_vector.hpp  hagedorn_coefficient_vector.hpp  hagedorn_gradient_operator.hpp  hagedorn_parameter_set.hpp  hagedorn_wavepacket.hpp  hawp.hpp  hawp_commons.hpp  hawp_evaluator.hpp  hawp_gradient.hpp  hawp_gradient_evaluator.hpp  hawp_gradient_operator.hpp  hawp_paramset.hpp  homogeneous_inner_product.hpp  hyperbolic_shape.hpp  hypercubic_shape.hpp  inhomogeneous_inner_product.hpp  kahan_sum.hpp  lexical_shape_enumerator.hpp  macros.hpp  math_util.hpp  multi_index.hpp  quadrature_rule.hpp  shape_base.hpp  shape_commons.hpp  shape_enum.hpp  shape_enum_extended.hpp  shape_enum_subset.hpp  shape_enum_union.hpp  shape_enumeration_base.hpp  shape_enumeration_default.hpp  shape_enumeration_operations.hpp  shape_enumeration_subset.hpp  shape_enumeration_tree.hpp  (+19 more)
waveblocks/math/: pi.hpp  (+3 more)
(+182 files in other folders)
